--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,9 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurant</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Our Menu</h1>
+        <div class="section-1">
+            <section>
+                <p class="section-title title-1">Chicken</p>
+                <p class="section-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, facilis molestiae quidem doloremque placeat minus? Laboriosam quis molestiae aperiam pariatur culpa iusto, rerum cupiditate consectetur quidem, eveniet, impedit quas at!</p>
+            </section>
+        </div>
+        <div class="section-2">
+            <section>
+                <p class="section-title title-2">Beef</p>
+                <p class="section-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, facilis molestiae quidem doloremque placeat minus? Laboriosam quis molestiae aperiam pariatur culpa iusto, rerum cupiditate consectetur quidem, eveniet, impedit quas at!</p>
+            </section>
+        </div>
+        <div class="section-3">
+            <section>
+                <p class="section-title title-3">Sushi</p>
+                <p class="section-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, facilis molestiae quidem doloremque placeat minus? Laboriosam quis molestiae aperiam pariatur culpa iusto, rerum cupiditate consectetur quidem, eveniet, impedit quas at!</p>
+            </section>
+        </div>
+    </div>
 </body>
 </html>
