--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -14,19 +14,19 @@
             <div class="navbar-header">
                 <a href="#" class="navbar-brand">Food LLC</a>
                 
-                <button type="button" class="navbar-toggle visible-xs" data-toggle="dropdown" data-target="#bs-example-navbar-collapse-1" role="button" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <div class="dropdown-menu hidden-lg hidden-md hidden-sm">
-                    <ul>
-                      <li><a href="#">Chicken</a></li>
-                      <li><a href="#">Beef</a></li>
-                      <li><a href="#">Sushi</a></li>
-                    </ul>
-                </div>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right visible-xs text-center">
+                  <li><a href="#">Chicken</a></li>
+                  <li><a href="#">Beef</a></li>
+                  <li><a href="#">Sushi</a></li>
+                </ul>
             </div>
         </div>
     </nav>
