--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a href="#" class="navbar-brand">Food LLC</a>
+                <a href="#" class="navbar-brand">Food, LLC</a>
                 
                 <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
